<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_linear"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorLight"
    android:padding="8dp"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:src="@drawable/kandoesqlogo" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText

                android:id="@+id/login_username"
                android:layout_width="fill_parent"
                android:layout_height="48sp"
                android:hint="@string/loging_enter"
                android:inputType="text"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="48sp"
                android:hint="@string/login_enter_pass"
                android:inputType="textPassword"
                android:paddingBottom="8dp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:text="@string/login_login"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/login_or"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16sp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button_facebook"
                android:layout_width="match_parent"
                android:padding="12dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_noaccount"
                android:gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>


</ScrollView>