<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_linear"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorLight"
    android:padding="8dp"
    android:fitsSystemWindows="false">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/kandoelogo" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/reg_username"
                android:layout_width="fill_parent"
                android:layout_height="48sp"
                android:hint="@string/username_enter"
                android:inputType="text"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:layout_marginTop="8dp">

            <EditText

                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="48sp"
                android:hint="@string/email_enter"
                android:inputType="textEmailAddress"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/reg_password"


                android:layout_width="fill_parent"
                android:layout_height="48sp"
                android:hint="@string/password_enter"
                android:inputType="textPassword"
                android:paddingBottom="8dp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/reg_retypepassword"
                android:layout_width="fill_parent"

                android:layout_height="48sp"
                android:hint="@string/retype_password"
                android:inputType="textPassword"
                android:paddingBottom="8dp" />
        </android.support.design.widget.TextInputLayout>



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:text="@string/register_button" />
        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/reg_already_account" />
    </LinearLayout>
</ScrollView>
